--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "builds": [
     {
-      "src": "nuxt.config.js",
-      "use": "@nuxtjs/vercel-builder",
+    "src": "nuxt.config.js",
+      "use": "@nuxtjs/vercel-builder@0.23.0",
       "config": {}
     }
   ]
